# Techlife_ISSL

./: .gitignore  before_push.txt  db.sqlite3  db_backup.sqlite3  input.css  install_tailwind.txt  main.py  package.json  pyproject.toml  requirements.txt  runcommand.txt  watch-tailwind.bat
accounts/: admin.py  authentication.py  forms.py  manager.py  models.py  urls.py  utils.py  views.py
blog_post/: admin.py  context.py  context_processors.py  forms.py  models.py  urls.py  views.py
blog_post/templatetags/: custom_filters.py
comments/: admin.py  forms.py  models.py  urls.py  views.py
contact/: admin.py  forms.py  models.py  urls.py  views.py
dropdown sidebar/: index.html
earnings/: admin.py  models.py
forum/: admin.py  models.py  urls.py  views.py
interactions/: admin.py  models.py  views.py
root/: settings.py  urls.py
save_post/: admin.py  apps.py  models.py  views.py
static/css/: style.css  tailwind.css
staticfiles/css/: output.css  style.css  tailwind.css
staticfiles/js/: script.js
tags/: admin.py  models.py
templates/: 404.html  base.html  base_backup.html  contact_us_content.html  contact_us_page.html  home.html  partial_contact_us_page.html
templates/account/: forget_password.html  login_page.html  new_password.html  partial_user_dashboard.html  register_page.html  reset_password.html  user_dashboard.html  verify_code.html
templates/forum/: all_question.html  forum_answer.html  forum_base.html  forum_navbar.html  forum_sidebar.html  partial_question.html  question_page.html
templates/include/: footer.html  navbar.html  (+3 more)
(+48 files in other folders)
